style-grid.css
* {
    font-family: 'PT Sans', sans-serif;
}
html {
    background-color: whitesmoke;
    font-size: 20px;
}



/* nav bar */
nav {
    background-color:  hsl(175, 50%, 81%);  
    text-align: right;
    position: fixed;
    width: 100%;
    z-index:10;
}

.button {
    display: inline-block;
    padding: 0.25rem 1.3rem;
    margin: 0px; 
    position: relative;
    font-size: 1.6rem;
    color: hsl(234, 58%, 24%);
}

/* footer */
footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    background-color: hsl(175, 50%, 81%);
    width: 100%;
    z-index: 10;
    
} 

footer p {
    position: relative;
    display: inline-block;
    font-size: 1.6rem;
    font-weight: bold;
    margin: 0.25rem;
}

/* header */
#bkground {
    opacity: 0.6;
    grid-area: 2 / 1 / 4 / 13;
    z-index: 4;
    border-bottom: hsl(234, 58%, 24%) solid 3px;
    justify-items: center;
    box-sizing: border-box;
    width: 100%; 
    height: 100%; 
    overflow: hidden;
    object-fit: cover;
}

#bkground img {
    width: 100%;
    min-height: 100%;
    margin-top: -15rem;
}

#title {
    font-size: 5rem;
    text-align: center;
    line-height: 4rem;
    font-family: 'Playfair Display SC', serif;
    color: black;
    grid-area: 2 / 1 / 4 / 13;
    z-index: 8;
    align-self: center;

}

#moto {
    font-size: 2.5rem;
    text-align: center;
    line-height: 2.5rem;
    color: hsl(235, 54%, 16%);
    grid-area: 2 / 1 / 3 / 13;
    z-index: 7;
}

/* all pages*/
h3 {
    font-size: 1.6rem;
    margin: 0.5rem 0.75rem 0 0.75rem;
    padding: 0px 0px;  
    color: hsl(234, 58%, 24%);
}

h4 {
    font-size: 2rem;
    margin-top: 0;
}

p, li {
    text-align: left;
    font-size: 1.3rem;
}


/* Home page */
/*grid*/
.home-grid {
    display: grid;
    grid-template: 2.5rem repeat(7, 11rem) 2.5rem / repeat(12, 1fr);
}

#box1 {
    grid-area: 5 / 2 / 7 / 7;
    box-sizing: border-box;
    width: 100%; 
    height: 100%; 
    overflow: hidden;
    border: hsl(234, 58%, 24%) solid 3px;
    object-fit: cover;
}

#box2 {
    grid-area: 5 / 7 / 7 / 12;
    border:hsl(234, 58%, 24%) solid 3px;
    padding: 8%;
    background-color: whitesmoke;
    overflow: scroll;  
    z-index: 6;
}

#box3 {
    grid-area: 7 / 2 / 9 / 7;
    border: hsl(234, 58%, 24%) solid 3px;
    padding: 8%;
    background-color: whitesmoke;
    overflow: scroll;
    z-index: 6;
}

#box4 {
    grid-area: 7 / 7 / 9 / 12;
    box-sizing: border-box;
    width: 100%; 
    height: 100%; 
    overflow: hidden;
    border: hsl(234, 58%, 24%) solid 3px;
    object-fit: cover;
}

#box4 img {
    height: 100%;
    min-width: 100%;
}

.home-space {
    grid-area: 9 / 1 / 10 / 13;
}

/* Market */

.market-grid {
    display: grid;
    grid-template: 2.5rem repeat(3, 11rem) / repeat(12, 1fr);
    position: relative;
}

.page-heading {
    grid-area: 4 / 1 / 5 / 13;
    text-align: center;
    font-size: 2rem;
}

.home {
    position: relative;
    display: inline-block;
    text-align: center;
    border: hsl(234, 58%, 24%) double  4px;
    margin: 20px 40px;
}

.market {
    display: block;
    width: 100%;
    text-align: center;
    border:hsl(234, 58%, 24%) 5px solid;
    margin: 2px 15px 30px 15px;
}

.housepic {
    width: 350px;
    height: 300px;
}

.home p {
    text-align: center;
    margin: 0px;
    font-weight: 700;
    
}

h5 {
    font-size: 30px;
    color: red;
    margin: 5px;
}

@media screen and (max-width: 1390px) {
    html {
        font-size: 18px;
    }
    #bkground img {
        width: 100%;
        min-height: 100%;
        margin-top: -10rem;
    }
}

@media screen and (max-width: 1100px) {
    html {
        font-size: 15px;
    }
    #title{
        font-size: 4rem;
    }
    #moto {
        font-size: 2rem;
    }
    h4 {
        margin-bottom: 0.5rem;
    }
    p, li {
        font-size: 1.15rem;
    }
}
   

@media screen and (max-width: 750px) {
    .home-grid {
        grid-template: 2.5rem repeat(9, 9rem) 2.5rem / 100%;
    }

    .market-grid {
        grid-template: 2.5rem repeat(2, 9rem)  / 100%;
    }

    .page-heading {
        grid-row: 3;
        text-align: center;
        font-size: 2rem;
    }

    #bkground {
        display: none;
    }
    #box1 {
        grid-row: 3 / 5 ;
        grid-column: 1;
    }
    #box2 {
        grid-row: 5 / 7;
        grid-column: 1;
    }
    #box3 {
        grid-row: 9 / 11;
        grid-column: 1;
    }
    #box4 {
        grid-row: 7 / 9;
        grid-column: 1;
    }
    #title {
        font-size: 1.7rem;
        grid-row: 2;
        grid-column: 1;
    }
    #moto {
        display: none;
    }
    p, li {
        font-size: 1.1rem;
    }
    footer p {
        font-size: 0.85rem;
    }
    .home-space {
        display: none;
    }
    nav {
        text-align: center;
        font-size: 1.2rem;
    }
    nav span, footer span {
        display: none;
    }
    #box2, #box3{
        padding: 4%;
        overflow: hidden;
    }
    .home {
        margin: 1rem 0;
    }
    .market {
        margin: 1rem 0;
        padding: 2px;
    }
      
} 

